--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=waiting_line
+
+# URL de la base de données
+spring.datasource.url=jdbc:mysql://localhost:3306/waiting_line_db?createDatabaseIfNotExist=true
+
+# Nom d'utilisateur de la base de données
+spring.datasource.username=root
+
+# Mot de passe de la base de données
+spring.datasource.password=eclipse23
+
+# Driver JDBC pour MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Stratégie de gestion du schéma de base de données
+spring.jpa.hibernate.ddl-auto=update
+
+# Dialecte de la base de données pour Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+
